FIX: [9.1] correct colour of links in header overflow dropdown [t20987]

--- a/releases/9.1/css/colour.css
+++ b/releases/9.1/css/colour.css
@@ -27,6 +27,8 @@ input[readonly] {
 #Header a:hover,
 #Header .current {opacity:1;text-decoration: none}
 #Header li.UploadButton a {color: white;}
+/* links in Header overflow dropdown menu */
+#HiddenLinks li a {color:#fff; opacity:0.7;}
 
 /* Colours for $header_text_title */
 #TextHeader, #TextHeader a, #TextDesc {color:#fff;}
